# finally_a_value_bot

./: .env.example  .gitignore  ARCHITECTURE.md  CONTEXT_COUPLING_REVIEW.md  Cargo.toml  DEVELOP.md  DOCKER.md  DOCKER.md.bak  Dockerfile  Dockerfile.bak  README.md  TEST.md  add_indexing_task.py  backup.md  build.rs  deploy-dev.sh  deploy.sh  docker-compose.yml  docker-compose.yml.bak  finally-a-value-bot.config.example.yaml  install.ps1  install.sh  list_tasks.py  refresh.sh  reload.sh  run_pz_elevator_swap.py  uninstall.ps1  uninstall.sh
.cursor/plans/: agent_delegation_architecture.plan.md  orchestrator_first_agentic_loop.plan.md  orchestrator_plan-first_architecture.plan.md  todo_to_tiered_memory.plan.md  tsa_and_cursor_tmux_combined.plan.md
.github/: dependabot.yml
docs/: architecture_review.md  development-journal.md  mcp-sdk-evaluation.md  memory-framework.md  runtime-gap-analysis.md  workflow.md
scripts/: cleanup_agent_history.sh  cursor-agent-runner.py  cursor-agent-runner.sh  docker-entrypoint.sh  docker-entrypoint.sh.bak  release_homebrew.sh
src/: agent_history.rs  agent_loop.rs  background_jobs.rs  background_shell.rs  builtin_skills.rs  channel.rs  chat_queue.rs  config.rs  config_wizard.rs  db.rs  doctor.rs  error.rs  final_delivery_dedupe.rs  gateway.rs  job_heartbeat.rs  lib.rs  llm.rs  llm_catalog.rs  logging.rs  main.rs  mcp.rs  memory.rs  persona.rs  post_tool_evaluator.rs  safety_redaction.rs  scheduler.rs  setup.rs  skills.rs  slash_commands.rs  social_oauth.rs  tool_skill_agent.rs  web.rs
src/tools/: bash.rs  (+32 more)
tests/: config_validation.rs  db_integration.rs  tool_permissions.rs
web/: index.html  package-lock.json  package.json  vite.config.ts.timestamp-1778621552489-4eb4a1dc91c1b.mjs  vitest.config.ts
(+56 files in other folders)
