[package]
name = "finally-a-value-bot"
version = "0.0.37"
edition = "2021"
license = "MIT"

[lints.clippy]
too_many_arguments = "allow"
needless_range_loop = "allow"
unnecessary_map_or = "allow"
needless_borrow = "allow"
map_clone = "allow"
manual_strip = "allow"
manual_is_multiple_of = "allow"
if_same_then_else = "allow"
manual_flatten = "allow"
match_result_ok = "allow"
manual_clamp = "allow"
needless_borrows_for_generic_args = "allow"
manual_contains = "allow"
single_char_add_str = "allow"
unnecessary_lazy_evaluations = "allow"
ptr_arg = "allow"
unnecessary_cast = "allow"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
regex = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
dotenvy = "0.15"
cron = "0.13"
urlencoding = "2"
base64 = "0.22"
chrono-tz = "0.10"
axum = "0.7"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
include_dir = "0.7"
async-stream = "0.3"
futures-util = "0.3"
html-escape = "0.2"

[dev-dependencies]
tower = "0.5"
